# nasdaq-turnaround-screener

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
docs/: architecture.md  doc-review-2026-04-22.md  factor-expansion-design.md  improvements-2026-04-24.md  indicator-persistence-plan.md  openclaw-cron-runbook.md  operations.md  phase1-implementation-checklist.md  phase2-implementation-checklist.md  phase3-implementation-checklist.md  phase3-refinement-checklist.md  product.md  review-2026-04-21.md  roadmap.md  signals.md  spec.md  storage.md
docs/proposals/: backtest-feedback-loop-plan.md  backtest-feedback-loop.md
runtime/: earnings-calendar.json
scripts/: apply_tuning_proposal.py  run_daily.py  run_intraday_window.py
src/screener/: README.md  __init__.py  backtest.py  collector.py  config.py  intraday_artifacts.py  intraday_ops.py  pipeline.py  (+1 more)
tests/: test_alert_builder.py  test_alert_policy.py  test_alert_state.py  test_alert_writer.py  test_apply_tuning_proposal.py  test_assistant_briefing.py  test_backtest.py  test_cli.py  test_collector.py  test_earnings.py  test_indicators.py  test_intraday_alerts.py  test_intraday_artifacts.py  test_intraday_daily_integration.py  test_intraday_ops.py  test_markdown_report.py  test_market_data_providers.py  test_oracle_sql.py  test_pipeline.py  test_run_daily.py  test_run_intraday_window.py  test_scoring.py  test_scoring_invariants.py  test_technicals.py  test_tiering.py  test_tuning_grid.py  test_tuning_objective.py  test_tuning_runner.py  test_tuning_walkforward.py  test_universe_loader.py
(+46 files in other folders)
