[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "nasdaq-turnaround-screener"
version = "0.1.0"
description = "Personal NASDAQ-100 daily turnaround screener scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "typer>=0.12",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
screener = "screener.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/screener"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
